transform from class to object methods